# zkVerify

./: Cargo.toml  Dockerfile  proof.lita  steps.md
native/: Cargo.toml
native/src/: lib.rs  valida.rs
pallets/verifiers/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  migrations.rs  proxy.rs  weights.rs
runtime/src/weights/: pallet_valida_verifier.rs
valida-verifier/: Cargo.toml  fibonacci
valida-verifier/src/: verifier.rs
verifiers/valida/: Cargo.toml
verifiers/valida/src/: lib.rs  weight.rs
