[package]
name = "valida-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.94", optional = true }
serde_json = { version = "1.0.133", optional = true }
tempfile = { version = "3.14.0", optional = true }
tracing = { version = "0.1.41", optional = true }
flate2 = { version = "1.0.35", optional = true }
hex = { version = "0.4.3" }
sp-core = { default-features = false, features = ["serde"], version = "34.0.0" }
zip = { version = "2.2.1" }
parity-scale-codec = { version = "3.6.1", default-features = false, features = [
	"derive",
] }

[features]
default = ["std"]
std = [
    "anyhow/std",
    "serde_json",
    "tempfile",
    "tracing/std",
    "flate2",
    "sp-core/std",
    "parity-scale-codec/std"
]
